update stop.sh and change logic topology.conf

--- a/topo/topology.conf
+++ b/topo/topology.conf
@@ -5,7 +5,8 @@ ContextBroker=http://182.252.135.132:1026/v2/entities/
 tagArr=parking,dust,weather1,weather2,weather3,bus1
 fiwareServicepath=/avlpkspothist,/airqltobjhist,/weatherobshist,/weather2,/weather3,/buslinehist
 fiwareService=city
-parking=availableSpotNumber,status
-dust=dataObserved,so2,co,o3,no2,pm10,pm25,airQualityLevel
-weather1=dataObserved,hourlyRainfall,humidity,rainfall,temperature,visibilityValue,weatherType,windSpeed
-bus1=busLineType,localID,name,shortID
+# 업데이트 시 빼야할 항목 정의 
+parking=congestionPrediction
+dust=
+weather1=
+bus1=
