--- a/flume/conf/log4j.properties
+++ b/flume/conf/log4j.properties
@@ -45,7 +45,7 @@ log4j.appender.LOGFILE.MaxFileSize=100MB
 log4j.appender.LOGFILE.MaxBackupIndex=10
 log4j.appender.LOGFILE.File=${flume.log.dir}/${flume.log.file}
 log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
-log4j.appender.LOGFILE.layout.ConversionPattern=%d %-5p (%c{1.}.%M:%L) - %m%n
+log4j.appender.LOGFILE.layout.ConversionPattern=%d %-5p (%C.%M:%L) - %m%n
 
 
 # Warning: If you enable the following appender it will fill up your disk if you don't have a cleanup job!
@@ -57,7 +57,7 @@ log4j.appender.DAILY.rollingPolicy=org.apache.log4j.rolling.TimeBasedRollingPoli
 log4j.appender.DAILY.rollingPolicy.ActiveFileName=${flume.log.dir}/${flume.log.file}
 log4j.appender.DAILY.rollingPolicy.FileNamePattern=${flume.log.dir}/${flume.log.file}.%d{yyyy-MM-dd}
 log4j.appender.DAILY.layout=org.apache.log4j.PatternLayout
-log4j.appender.DAILY.layout.ConversionPattern=%d %-5p (%c{1.}.%M:%L) - %m%n
+log4j.appender.DAILY.layout.ConversionPattern=%d %-5p (%C.%M:%L) - %m%n
 
 
 # console
