update storm-kafka-client complete

--- a/storm/topology.conf
+++ b/storm/topology.conf
@@ -1,5 +1,6 @@
 debug=false
 zkConnString=zk1:2181,zk2:2181,zk3:2181
+kafkaBroker=kafka:9092
 topic=CityHub
 ContextBroker=http://182.252.135.132:1026/v2/entities/
 tagArr=parking,dust,weather1,bus1
