--- a/storm/topology.conf
+++ b/storm/topology.conf
@@ -1,13 +1,13 @@
 debug=false
-zkConnString=zk1:2181,zk2:2181,zk3:2181
 kafkaBroker=kafka:9092
 topic=CityHub
 ContextBroker=http://182.252.135.132:1026/v2/entities/
-tagArr=parking,dust,weather1,bus1
-fiwareServicepath=/avlpkspothist,/airqltobjhist,/weatherobshist,/buslinehist
-fiwareService=city
-# 업데이트 시 빼야할 항목 정의 
-parking=congestionPrediction
-dust=
-weather1=
-bus1=
+ServiceName=city
+tagArr=avlpkspothist,airqltobjhist,weatherobshist,buslinehist,airqltfore,weatherfore
+# 업데이트 시 빼야할 항목 정의
+avlpkspothist=congestionPrediction
+airqltobjhist=
+weatherobshist=
+buslinehist=
+airqltfore=
+weatherfore=
