--- a/park/lib/weather/weather1.template
+++ b/park/lib/weather/weather1.template
@@ -60,5 +60,9 @@
    "dateCreated":{
       "type":"DateTime",
       "value":""
-   }
+   },
+  "dateModified": {
+    "type": "DateTime",
+    "value": ""
+  }
 }
