change file extesion

--- a/park/conf/park.conf
+++ b/park/conf/park.conf
@@ -10,7 +10,7 @@ park.sources.mqttSubPark.PUB_HOST=http://203.253.128.164:7579
 park.sources.mqttSubPark.PUB_CSE_NAME=Mobius
 park.sources.mqttSubPark.PUB_AE_NAME=sync_parking_raw
 park.sources.mqttSubPark.CONN_TERM = 600
-park.sources.mqttSubPark.CONF_FILE = park/parkingList.template
+park.sources.mqttSubPark.CONF_FILE = park/parkingList.csv
 
 ## mqttSpotSrc
 park.sources.mqttSubSpot.channels = loggerChannel
@@ -19,7 +19,7 @@ park.sources.mqttSubSpot.PUB_HOST=http://203.253.128.164:7579
 park.sources.mqttSubSpot.PUB_CSE_NAME=Mobius
 park.sources.mqttSubSpot.PUB_AE_NAME=sync_parking_raw
 park.sources.mqttSubSpot.CONN_TERM = 28800
-park.sources.mqttSubSpot.CONF_FILE = park/spotList.template
+park.sources.mqttSubSpot.CONF_FILE = park/spotList.csv
 
 ## loggerChannel
 park.channels.loggerChannel.type = memory
