--- a/flume/conf/agent.conf
+++ b/flume/conf/agent.conf
@@ -77,7 +77,7 @@ agent.sources.mqttSubPark.PUB_HOST=http://203.253.128.164:7579
 agent.sources.mqttSubPark.PUB_CSE_NAME=Mobius
 agent.sources.mqttSubPark.PUB_AE_NAME=sync_parking_raw
 agent.sources.mqttSubPark.CONN_TERM = 600
-agent.sources.mqttSubPark.CONF_FILE = park/parkingList.template
+agent.sources.mqttSubPark.CONF_FILE = park/parkingList.csv
 
 ## mqttSpotSrc
 agent.sources.mqttSubSpot.channels = loggerChannel
@@ -86,7 +86,7 @@ agent.sources.mqttSubSpot.PUB_HOST=http://203.253.128.164:7579
 agent.sources.mqttSubSpot.PUB_CSE_NAME=Mobius
 agent.sources.mqttSubSpot.PUB_AE_NAME=sync_parking_raw
 agent.sources.mqttSubSpot.CONN_TERM = 28800
-agent.sources.mqttSubSpot.CONF_FILE = park/spotList.template
+agent.sources.mqttSubSpot.CONF_FILE = park/spotList.csv
 
 ## kafkaChannel
 agent.channels.kafkaChannel.type = org.apache.flume.channel.kafka.KafkaChannel
