--- a/storm/topology.conf
+++ b/storm/topology.conf
@@ -1,10 +1,10 @@
 debug=false
 kafkaBroker=kafka:9092
 topic=CityHub
-ContextBroker=http://182.252.135.132:1026/v2/entities/
+ContextBroker=http://182.252.135.132:1026/
 ServiceName=city
 tagArr=avlpkspothist,airqltobjhist,weatherobshist,buslinehist,airqltfore,weatherfore
-# 업데이트 시 빼야할 항목 정의
+# 업데이트 제외 필드 정의
 avlpkspothist=congestionPrediction
 airqltobjhist=
 weatherobshist=
