abstract class test complete

--- a/flume/conf/agent.conf
+++ b/flume/conf/agent.conf
@@ -78,18 +78,18 @@ agent.sources.buslinehist.STATION_FILE = bus/bstopStation.conf
 ## mqttSubPark
 agent.sources.mqttSubPark.channels = loggerChannel
 agent.sources.mqttSubPark.type=com.pinecni.cityhub.source.mqtt.MqttSubSource
-agent.sources.mqttSubPark.PUB_HOST=http://203.253.128.164:7579
-agent.sources.mqttSubPark.PUB_CSE_NAME=Mobius
-agent.sources.mqttSubPark.PUB_AE_NAME=sync_parking_raw
+agent.sources.mqttSubPark.HOST=http://203.253.128.164:7579
+agent.sources.mqttSubPark.CSE_NAME=Mobius
+agent.sources.mqttSubPark.AE_NAME=sync_parking_raw
 agent.sources.mqttSubPark.CONN_TERM = 600
 agent.sources.mqttSubPark.CONF_FILE = park/parkingList.csv
 
 ## mqttSubSpot
 agent.sources.mqttSubSpot.channels = loggerChannel
 agent.sources.mqttSubSpot.type=com.pinecni.cityhub.source.mqtt.MqttSubSource
-agent.sources.mqttSubSpot.PUB_HOST=http://203.253.128.164:7579
-agent.sources.mqttSubSpot.PUB_CSE_NAME=Mobius
-agent.sources.mqttSubSpot.PUB_AE_NAME=sync_parking_raw
+agent.sources.mqttSubSpot.HOST=http://203.253.128.164:7579
+agent.sources.mqttSubSpot.CSE_NAME=Mobius
+agent.sources.mqttSubSpot.AE_NAME=sync_parking_raw
 agent.sources.mqttSubSpot.CONN_TERM = 28800
 agent.sources.mqttSubSpot.CONF_FILE = park/spotList.csv
 
@@ -101,7 +101,7 @@ agent.channels.kafkaChannel.kafka.consumer.group.id = flume-consumer
 
 ## kafkaSink
 agent.sinks.kafkaSink.channel = kafkaChannel
-agent.sinks.kafkaSink.type = com.pinecni.cityhub.sinks.kafka.KafkaSink
+agent.sinks.kafkaSink.type = org.apache.flume.sink.kafka.KafkaSink
 agent.sinks.kafkaSink.kafka.topic = CityHub
 agent.sinks.kafkaSink.kafka.bootstrap.servers = kafka:9092
 agent.sinks.kafkaSink.kafka.flumeBatchSize = 20
