modified conf file

--- a/storm/topology.conf
+++ b/storm/topology.conf
@@ -2,7 +2,11 @@ debug=false
 kafkaBroker=kafka:9092
 topic=CityHub
 ContextBroker=http://182.252.135.132:1026/
-ServiceName=city
+service-name=city
+header-service=fiware-service
+header-servicepath=fiware-servicepath
+cb-base=v2/entities/
+cb-upd=v2/op/update/
 tagArr=avlpkspothist,airqltobjhist,weatherobshist,buslinehist,airqltfore,weatherfore
 # 업데이트 제외 필드 정의
 avlpkspothist=congestionPrediction
