modified callback and conf

--- a/flume/conf/agent.conf
+++ b/flume/conf/agent.conf
@@ -9,8 +9,9 @@ agent.sources.avlpkspothist.channels = kafkaChannel loggerChannel
 agent.sources.avlpkspothist.selector.type = replicating
 agent.sources.avlpkspothist.type=com.pinecni.cityhub.source.mqtt.MqttSource
 agent.sources.avlpkspothist.URL_ADDR=tcp://203.253.128.164:1883
-agent.sources.avlpkspothist.TOPIC=/oneM2M/req/+/SlotYatopParking/#
-agent.sources.avlpkspothist.RESP_TOPIC=/oneM2M/resp/Mobius2/SlotYatopParking/json
+agent.sources.avlpkspothist.REQ_PREFIX=/oneM2M/req/+/
+agent.sources.avlpkspothist.RESP_PREFIX=/oneM2M/resp/Mobius2/
+agent.sources.avlpkspothist.TOPIC=SlotYatopParking
 agent.sources.avlpkspothist.JSON_TAG=avlpkspothist
 agent.sources.avlpkspothist.GS1PREFIX=urn:epc:id:sgln:880002697101.
 
