--- a/storm/topology.conf
+++ b/storm/topology.conf
@@ -1,14 +1,20 @@
 debug=false
+
+## 카프카 브로커는 Comma로 구분해서 복수 등록 
 kafkaBroker=kafka:9092
+
+## 카프카 토픽은 Comma로 구분해서 복수 등록
 topic=CityHub
+
+## 컨텍스트 브로커에 저장할때 필요한 설정
 ContextBroker=http://182.252.135.132:1026/
+cb-base=v2/entities/
+cb-upd=v2/op/update/
 service-name=city
 header-service=fiware-service
 header-servicepath=fiware-servicepath
-cb-base=v2/entities/
-cb-upd=v2/op/update/
 tagArr=avlpkspothist,airqltobjhist,weatherobshist,buslinehist,airqltfore,weatherfore
-# 업데이트 제외 필드 정의
+# 분류별 업데이트 항목 중에 제외할 필드 정의
 avlpkspothist=congestionPrediction
 airqltobjhist=
 weatherobshist=
